--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ repositories {
 }
 
 ext {
-    jacksonVersion = '2.13.2'
-    jacksonDatabindVersion = '2.13.2.2'
+    jacksonVersion = '2.13.3'
+    jacksonDatabindVersion = '2.13.3'
 }
 
 dependencies {
@@ -20,6 +20,9 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonDatabindVersion"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.mock-server:mockserver-junit-jupiter-no-dependencies:5.13.2'
+    testImplementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     compileOnly 'org.apiguardian:apiguardian-api:1.1.2'
 }
 
