FLIN-2366 Exception class

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 group = "com.duffel"
 version = "0.0.1"
