--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Package
-          path: build/libs
+          path: |
+            build/libs
+            build/reports
