FLIN-2367 rename job

--- a/.github/workflows/code-examples.yml
+++ b/.github/workflows/code-examples.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  examples:
     runs-on: ubuntu-latest
     env:
       DUFFEL_ACCESS_TOKEN: ${{ secrets.DUFFEL_ACCESS_TOKEN }}
