--- a/build.gradle
+++ b/build.gradle
@@ -86,9 +86,9 @@ publishing {
             if (project.hasProperty('sign')) {
                 signing {
                     useInMemoryPgpKeys(
-                        property('SIGNING_KEY_ID'),
-                        property('SIGNING_KEY'),
-                        property('SIGNING_PASSWORD')
+                        property('SIGNINGKEYID'),
+                        property('SIGNINGKEY'),
+                        property('SIGNINGPASSWORD')
                     )
                     sign publishing.publications.release
                     sign configurations.archives
@@ -128,8 +128,8 @@ publishing {
             def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username = findProperty("SONATYPE_USERNAME")
-                password = findProperty("SONATYPE_PASSWORD")
+                username = findProperty("SONATYPEUSERNAME")
+                password = findProperty("SONATYPEPASSWORD")
             }
         }
     }
