--- a/.github/workflows/code-examples.yml
+++ b/.github/workflows/code-examples.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build example
+          arguments: build --scan example
       - name: Upload built artifacts
         if: success() || failure()
         uses: actions/upload-artifact@v3
