--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,9 +33,10 @@ jobs:
         with:
           arguments: build publish -Psign
       - name: Upload built artifacts
+        if: success() || failure()
         uses: actions/upload-artifact@v3
         with:
           name: Package
           path: |
-            build/libs
-            build/reports
+            build/libs/
+            build/reports/
